--- a/assets/scss/_about.scss
+++ b/assets/scss/_about.scss
@@ -1,6 +1,7 @@
-#wrapper {
+#wrapper-about {
     margin-top: 2%;
     background-size: cover;
+
     .page_text {
         display: flex;
         justify-content: center;
@@ -313,13 +314,15 @@
     .swiper-button-prev {
         display: none !important;
     }
-    .swiper-pagination{
+
+    .swiper-pagination {
         bottom: 120px;
         gap: di;
         display: flex;
         justify-content: center;
         gap: 22px;
-        .swiper-pagination-bullet{
+
+        .swiper-pagination-bullet {
             background-color: #000;
             width: 3px;
             height: 3px;
@@ -329,13 +332,14 @@
     .owl-item {
         height: 572px;
 
-       
+
 
         .block-image {
             display: flex;
             justify-content: center;
             align-items: center;
             padding-top: 3%;
+
             img {
                 height: 100%;
             }
@@ -351,18 +355,19 @@
             .descript {
                 padding-top: 4%;
                 color: #000;
-                font-size: 30px;
+                font-size: 21px;
                 font-style: italic;
                 line-height: 40px;
                 text-align: center;
             }
+
             .user-img {
 
                 img {
-                    width: 70px;
-                    height: 70px;
+                    width: 140px;
+                    height: 140px;
                     border-radius: 50%;
-                    margin-top: 15px
+                    margin-top: -11px;
                 }
             }
         }
@@ -404,13 +409,14 @@
 
 
         }
-        .job{
+
+        .job {
             margin-top: 28px;
         }
-     
+
     }
 
-  
+
 }
 
 
@@ -448,6 +454,7 @@
 hr {
     color: #b4afaf;
 }
+
 @font-face {
     font-family: Great Vibes;
     src: url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
